# task_2_Cpp

./: CMakeLists.txt  README.md  main.cpp
